# grid-MSPCG

./: CMakeLists.txt  MSPConjugateGradient.h  expand-grid.h  main.cc  precision.h
